--- a/src/app/pages/sale/forms/form-sale-detail/form-sale-detail.component.html
+++ b/src/app/pages/sale/forms/form-sale-detail/form-sale-detail.component.html
@@ -167,6 +167,6 @@
 
 <div class="d-flex flex-row flex-wrap gap-2 justify-content-end">
   <button type="button" class="btn btn-light" (click)="onCancel()"><i class="mdi mdi-cancel me-1"></i>{{'MODALS.BUTTONS.CANCEL' | translate}}</button>
-  <button type="button" class="btn btn-success" *ngIf="isNewData" (click)="onSubmit()"><i class="mdi mdi-content-save me-1"></i> {{'FORMS.BUTTONS.REGISTER' | translate}}</button>
+  <button type="button" class="btn btn-success" *ngIf="isNewData" (click)="onSubmit()"><i class="mdi mdi-content-save me-1"></i> {{'FORMS.BUTTONS.SAVE' | translate}}</button>
   <button type="button" class="btn btn-info"  *ngIf="!isNewData" (click)="onSubmit()"><i class="mdi mdi-content-save me-1"></i> {{'FORMS.BUTTONS.UPDATE' | translate}}</button>
 </div>
