Cambios en frontend graficos

--- a/src/app/extrapages/lockscreen/lockscreen.component.html
+++ b/src/app/extrapages/lockscreen/lockscreen.component.html
@@ -7,8 +7,8 @@
             <div class="row">
               <div class="col-7">
                 <div class="text-primary p-4">
-                  <h5 class="text-primary">Lock screen</h5>
-                  <p>Enter your password to unlock the screen!</p>
+                  <h5 class="text-primary">Bloqueo de pantalla</h5>
+                  <p>¡Ingresa tu contraseña para desbloquear la pantalla!</p>
                 </div>
               </div>
               <div class="col-5 align-self-end">
@@ -32,15 +32,15 @@
                 <div class="user-thumb text-center mb-4">
                   <img src="assets/images/users/avatar-1.jpg" class="rounded-circle img-thumbnail avatar-md"
                     alt="thumbnail">
-                  <h5 class="font-size-15 mt-3">Maria Laird</h5>
+                  <h5 class="font-size-15 mt-3"> Usuario</h5>
                 </div>
                 <div class="mb-3">
-                  <label for="userpassword">Password</label>
-                  <input type="password" class="form-control" id="userpassword" placeholder="Enter password">
+                  <label for="userpassword">Contraseña</label>
+                  <input type="password" class="form-control" id="userpassword" placeholder="Ingresa tu Contraseña">
                 </div>
 
                 <div class="text-end">
-                    <button class="btn btn-primary w-md" type="submit">Unlock</button>
+                    <button class="btn btn-primary w-md" type="submit">Desbloquear</button>
                   </div>
 
               </form>
@@ -49,8 +49,8 @@
           </div>
         </div>
         <div class="mt-5 text-center">
-          <p>Not you ? return <a routerLink="/account/login" class="fw-medium text-primary"> Sign In </a> </p>
-          <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+          <p>¿No eres tú? Regresar <a routerLink="/account/login" class="fw-medium text-primary"> Iniciar sesión </a> </p>
+          <p>© {{year}} CRM.  Creado por <i class="mdi mdi-heart text-danger"></i> Midas Solutions Center</p>
         </div>
       </div>
     </div>
