--- a/src/app/extrapages/page500/page500.component.html
+++ b/src/app/extrapages/page500/page500.component.html
@@ -4,9 +4,9 @@
       <div class="col-lg-12">
         <div class="text-center mb-5">
           <h1 class="display-2 fw-medium">5<i class="bx bx-buoy bx-spin text-primary display-3"></i>0</h1>
-          <h4 class="text-uppercase">Internal Server Error</h4>
+          <h4 class="text-uppercase">Error Interno en el servidor</h4>
           <div class="mt-5 text-center">
-            <a class="btn btn-primary" routerLink="/">Back to Dashboard</a>
+            <a class="btn btn-primary" routerLink="/">Volver al panel</a>
           </div>
         </div>
       </div>
