--- a/src/app/pages/main/main/main.component.scss
+++ b/src/app/pages/main/main/main.component.scss
@@ -15,7 +15,7 @@
     }
   
     .titulo {
-      font-size: 18px;
+      font-size: 25px;
       font-weight: bold;
       margin-top: 8px;
     }
@@ -38,7 +38,25 @@
   img {
   
     display: block;
-    width: 70%;
+    width: 80%;
     margin: auto;
     height: auto;
   }
+
+.view {
+  height: 100vh;
+}
+/* Full Page Carousel itself*/
+.carousel {
+  height: 100vh;
+}
+.carousel .carousel-inner {
+  height: 100vh;
+}
+.carousel .carousel-inner .carousel-item,
+.carousel .carousel-inner .active {
+  height: 100vh;
+}
+.video-fluid {
+  max-width: unset;
+}
