--- a/src/app/pages/sale/info/info-general/info-general.component.html
+++ b/src/app/pages/sale/info/info-general/info-general.component.html
@@ -9,7 +9,7 @@
           <div class="row gx-2">           
             <div class="col-lg-6">
               <div class="d-flex justify-content-start gap-2 flex-wrap mb-2"><strong>Nombre:</strong> <span>{{dataPerson?.nombres}}</span></div>
-              <div class="d-flex justify-content-start gap-2 flex-wrap mb-2"><strong>Apellido:</strong> <span>{{dataPerson?.apellido_paterno}}</span></div>
+              <div class="d-flex justify-content-start gap-2 flex-wrap mb-2"><strong>Apellidos:</strong> <span>{{dataPerson?.apellido_paterno}} {{dataPerson?.apellido_materno}}</span></div>
               <div class="d-flex justify-content-start gap-2 flex-wrap mb-2" *ngFor="let identification of dataPerson?.identifications"><strong>{{identification?.tipo_documentos_abreviacion}}:</strong> <span>{{identification?.documento}}</span></div>
               <div class="d-flex justify-content-start gap-2 flex-wrap mb-2">
                 <strong>Fecha de nac.:</strong> <span>{{dataPerson?.fecha_nacimiento}}</span>
