--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,5 @@ ngx-dropzone-preview {
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
