Cambios en frontend

--- a/src/app/pages/reports/all/all.component.html
+++ b/src/app/pages/reports/all/all.component.html
@@ -1,44 +1,45 @@
 
-<div class="container"> 
+<div class="container">
   <div class="card" >
     <div class="card-header">
       <h2>Reporte General</h2>
     </div>
-   <div class="card-body">           
-      <div class="container"> 
-          <div class="row"> 
-            <div class="col-md-4">              
-              <div class="p-3 mb-2 bg-success text-black text-center">
-                  <div class="card-header"> Total Vendidos   </div>    
-                  <div class="card-body">
-                    <h5 class="card-title"> <span id="Vendidos">35</span></h5>
-                    <p class="card-text">Baja en las ventas vs mes anterior </p>
+   <div class="card-body">
+      <div class="container">
+          <div class="row">
+
+            <div class="col-xl-3 col-md-6">
+              <div class="card bg-primary">
+                  <div class="card-title d flex text-white text-center"> Usuarios <i class="	fas fa-user-tie"></i></div>
+                  <div class="card-body d-flex align-items-center justify-content-between">
+                    <a href="http://localhost:4200/maintenances/user" class="text-white">Ver Detalle</a>
+                    
+                    <span class="text-white">12</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+              <div class="card bg-secondary">
+                  <div class="card-title d flex text-white text-center"> Productos <i class="fas fa-sun"></i></div>
+                  <div class="card-body d-flex align-items-center justify-content-between">
+                    <a href="http://localhost:4200/maintenances/product" class="text-white">Ver Detalle</a>
+                    
+                    <span class="text-white">3</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+              <div class="card bg-success">
+                  <div class="card-title d flex text-white text-center"> Total Ventas <i class="fas fa-euro-sign"></i></div>
+                  <div class="card-body d-flex align-items-center justify-content-between">
+                    <a href="http://localhost:4200/sale" class="text-white">Ver Detalle</a>
+                    
+                    <span class="text-white">35</span>
                 </div>
               </div>
             </div>
 
-                <div class="col-md-4">
-                  <div class ="bg-warning p-3 mb-2  text-black text-center">
-                    <div class="card-header"> Total Comerciales   </div>    
-                    <div class="card-body">
-                      <h5 class="card-title"> <span id="Vendidos">60</span></h5>
-                      <p class="card-text">Baja en las ventas  </p>
-                    </div>
-                  </div>
-                </div>
-                  <div class="col-md-4">
-                    <div class ="mb-1 bg-info p-3 mb-2  text-black text-center">
-                      <div class="card-header"> Total Coordinadores   </div>    
-                      <div class="card-body">
-                        <h5 class="card-title"> <span id="Vendidos">5</span></h5>
-                        <p class="card-text">Lista de Cordinadores </p>
-                      </div>
-                    </div>
-                  </div>
-
-
-  
-          </div>
+       </div>
           <div class="row my-3">
             <div class="col-md-12 text-center">
               <h2>Reporte de Ventas</h2>
@@ -54,9 +55,9 @@
           </div>
 
 
-              
-      </div> 
-    </div>  
-          
+
+      </div>
+    </div>
+
   </div>
 </div>
